set up ROOM database

--- a/app/src/main/res/layout/fragment_add_garment.xml
+++ b/app/src/main/res/layout/fragment_add_garment.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/mannequin1"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".AddGarment">
+    tools:context=".view.AddGarment">
 
     <TextView
         android:id="@+id/addyourgarment"
