--- a/app/src/main/res/layout/fragment_chosen_outfits.xml
+++ b/app/src/main/res/layout/fragment_chosen_outfits.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        tools:context=".ChosenOutfits">
+        tools:context=".view.ChosenOutfits">
 
         <TextView
             android:id="@+id/outfitschosen"
