--- a/app/src/main/res/layout/fragment_garment_list.xml
+++ b/app/src/main/res/layout/fragment_garment_list.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        tools:context=".GarmentList">
+        tools:context=".view.GarmentList">
 
         <TextView
             android:id="@+id/mycloset"
