--- a/app/src/main/res/layout/fragment_show_outfit.xml
+++ b/app/src/main/res/layout/fragment_show_outfit.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/mannequin1"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ShowOutfit">
+    tools:context=".view.ShowOutfit">
 
 
     <TextView
