--- a/app/src/main/res/layout/my_spinner.xml
+++ b/app/src/main/res/layout/my_spinner.xml
@@ -5,7 +5,6 @@
     android:textColor="@color/peach"
     android:textSize="18sp"
     android:textStyle="bold|italic"
-    android:gravity="center"
-    >
+    android:gravity="center">
 
 </TextView>
