--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -10,7 +10,7 @@
         android:id="@+id/clothimage"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toStartOf="@+id/clothcategory"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:textColor="@color/turquoise"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/clothwarmth"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/modify"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/clothimage"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +38,7 @@
         android:textColor="@color/turquoise"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/clotcomfort"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/modify"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/clothimage"
         app:layout_constraintTop_toBottomOf="@+id/clothcategory"
@@ -52,7 +52,7 @@
         android:textColor="@color/turquoise"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/clotloose"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/modify"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/clothimage"
         app:layout_constraintTop_toBottomOf="@+id/clothwarmth"
@@ -66,7 +66,7 @@
         android:textColor="@color/turquoise"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/clotfancy"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/delete"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/clothimage"
         app:layout_constraintTop_toBottomOf="@+id/clotcomfort"
@@ -79,19 +79,49 @@
         android:layout_height="wrap_content"
         android:textColor="@color/turquoise"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@+id/delete"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/clothimage"
         app:layout_constraintTop_toBottomOf="@+id/clotloose"
         app:layout_constraintVertical_bias="0.5"
         tools:text="Fancy" />
 
+    <Button
+        android:id="@+id/modify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:text="@string/modify"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/clothcategory"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:text="@string/delete"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/clotcomfort"
+        app:layout_constraintTop_toBottomOf="@+id/modify"
+        app:layout_constraintVertical_bias="0.5" />
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/pink"
         android:layout_marginTop="10dp"
+        android:background="@color/pink"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
