--- a/app/src/main/res/layout/fragment_garment_list.xml
+++ b/app/src/main/res/layout/fragment_garment_list.xml
@@ -37,8 +37,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragmentGarmentList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
