--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="200dp"
     android:layout_marginTop="10dp"
     tools:layout_editor_absoluteY="10dp">
 
@@ -23,8 +23,8 @@
 
     <ImageView
         android:id="@+id/clothimage"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
+        android:layout_width="140dp"
+        android:layout_height="180dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toStartOf="@+id/clothcategory"
         app:layout_constraintHorizontal_bias="0.5"
@@ -104,10 +104,11 @@
 
     <Button
         android:id="@+id/delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="20dp"
         android:background="@drawable/button"
         android:text="@string/delete"
+        android:textSize="12sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,10 +119,11 @@
 
     <Button
         android:id="@+id/modify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="20dp"
         android:background="@drawable/button"
         android:text="@string/modify"
+        android:textSize="12sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/delete"
         app:layout_constraintEnd_toEndOf="parent"
